test/types/sync/vass/ref-sync-4.good
ref-sync-4.chpl:5: error: unresolved call 'MYPROC(sync int(64))'
ref-sync-4.chpl:7: note: this candidate did not match: MYPROC(ref FORMAL: syncreal)
ref-sync-4.chpl:5: note: because actual argument #1 with type 'sync int(64)'
ref-sync-4.chpl:7: note: is passed to formal 'ref FORMAL: sync real(64)'
